# cuda-ipc-get-mem-handle-consumer-producer

./: CMakeLists.txt  LICENSE  README.md  main.cpp
